--- a/config.env
+++ b/config.env
@@ -73,7 +73,7 @@ FSUB_CHANNEL_ID =
 
 # qBittorrent
 BASE_URL_OF_BOT = ""
-SERVER_PORT = "80"
+SERVER_PORT = "77"
 WEB_PINCODE = ""
 QB_SEED = ""
 
@@ -139,7 +139,7 @@ SHOW_LIMITS_IN_STATS = ""   #Default is false
 TELEGRAPH_STYLE = ""     #Default is False
 
 #BRANDING
-CREDIT_NAME = "AKIMAX" 
+CREDIT_NAME = "" 
 
 #DYNAMIC IMAGES
 PICS = ""               # Add multiple telgraph image links that are seperated by spaces
