--- a/config.env
+++ b/config.env
@@ -44,13 +44,13 @@ BOT_PM = ""
 FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = 
+LEECH_LOG = -1001605105631
 LEECH_LOG_URL = ""
 LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
 
 #Mirror
-MIRROR_LOGS = -1001605105631
+MIRROR_LOGS = 
 MIRROR_LOG_URL = ""
 LINK_LOGS = 
 
